test/files/neg/t9617.check
Test.scala:4: warning: class DeprecatedClass in package p1 is deprecated
object Test extends p1.DeprecatedClass {
                       ^
Test.scala:5: warning: class DeprecatedClass in package p1 is deprecated
  def useC = p1.DeprecatedClass.foo
                ^
Test.scala:6: warning: method foo in class DeprecatedMethod is deprecated
  def useM = p1.DeprecatedMethod.foo
                                 ^
error: No warnings can be incurred under -Werror.
3 warnings
1 error
